# hexarch

./: .env.template  .gitignore  Cargo.toml  LICENSE  README.md
migrations/: 20240603122606_create_authors.down.sql  20240603122606_create_authors.up.sql  20240604104353_create_posts.up.sql
src/lib/: common.rs  config.rs  lib.rs  outbound.rs  routes.rs
src/lib/common/: newtypes.rs
src/lib/domain/: author.rs
src/lib/domain/author/: models.rs  ports.rs  service.rs
src/lib/domain/author/models/: author.rs  errors.rs
src/lib/domain/blog/: mod.rs  models.rs  ports.rs  service.rs
src/lib/domain/blog/models/: author.rs
src/lib/domain/posts/: models.rs  ports.rs  service.rs
src/lib/domain/posts/models/: author.rs  errors.rs  post.rs
src/lib/inbound/: http.rs
src/lib/inbound/http/: handlers.rs  responses.rs
src/lib/inbound/http/handlers/: create_author.rs
src/lib/outbound/: email_client.rs  prometheus.rs  sqlite.rs
