[package]
name = "hexarch"
version = "0.1.0"
edition = "2021"

[lib]
name = "hexarch"
path = "src/lib/lib.rs"

[[bin]]
name = "hexarch_server"
path = "src/bin/server/main.rs"


[dependencies]
anyhow = "1.0.86"
axum = "0.7.5"
derive_more = "0.99.17"
serde = { version = "1", features = ["std", "derive"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "macros"] }
thiserror = "1.0.61"
tokio = { version = "1.38", features = ["full"] }
tower-http = { version = "0.5.2", features = ["trace"] }
tower-layer = "0.3.2"
tracing = "0.1.40"
tracing-subscriber = "0.3"
uuid = { version = "1.8", features = ["v4", "fast-rng"] }
